--- a/title.tex
+++ b/title.tex
@@ -20,7 +20,7 @@
 \vspace{1em}
 
 \begin{center}
-\title\textsc{\textbf{Перестановки слотів у групованих шифротекстах гомоморфних схем шифрування над поліноміальними кільцями}} \\
+\title\textsc{\textbf{Перестановки слотів у групованих шифротекстах гомоморфних схем шифрування}} \\
 Курсова робота за спеціальністю «Прикладна математика»
 \end{center}
 
