--- a/title.tex
+++ b/title.tex
@@ -15,7 +15,7 @@
 \vspace{2em}
 
 \centering
-\includegraphics[height=8em]{resources/logo.png}
+\includegraphics[height=8em]{resources/kma-logo.png}
 
 \vspace{1em}
 
